fix collapse css & component

--- a/src/styles/components/_collapse.scss
+++ b/src/styles/components/_collapse.scss
@@ -1,46 +1,56 @@
 .collapse__component{
-    display: flex;
-    flex-direction: column;
-    gap: 20px;
-    margin-bottom: 20px;
-    padding: 0px 20px 0px 20px;
-}
-
-
-.collapse__box {
-  border-radius: 5px;
-  background: var(--Red, #ff6060);
   display: flex;
-  align-items: center;
-  justify-content: space-between;
-  padding: 10px 20px 10px 10px;
-
-  button {
-    position: relative;
+  flex-direction: column;
+  gap: 20px;
+  margin-bottom: 20px;
+  padding: 0px 20px 0px 20px;
+}
+.collapse__box {
+border-radius: 5px;
+background: var(--Red, #FF6060);
+display: flex;
+align-items: center;
+justify-content: space-between;
+padding: 10px 20px 10px 10px;
+&__arrow{
+  position: relative;
+  display: grid;
+  background-color: transparent;
+  border: none;
+  padding: 0;
+  transition: all 0.3s ease-in-out;
+  &.is-active {
+    transform: rotate(180deg);
+  }
+  svg {
     width: 32px;
     height: 32px;
-
-    svg {
-      position: absolute;
-
-      top: 0;
-      left: 0;
-    }
+    display: block;
+    grid-column: 1/-1;
+    grid-row: 1/-1;
+    justify-self: center;
+    align-self: center;
   }
 }
-
-.collapse__content {
-  //padding: 20px;
-  transform: scaleY(0);
-  transform-origin: top;
-  transform: scaleY(1);
-  transition: all 2s;
-  border-radius: 10px 10px 5px 5px;
-  background: var(--Gray, #f6f6f6);
-  display: none;
 }
-
-.collapse__content:hover{
-    transform: scaleY(1);
-    display: block;
+.collapse__content {
+max-height: 0;
+height: 100%;
+overflow: hidden;
+transition: all 0.3s ease-in-out;
+background: var(--Gray, #F6F6F6);
+padding: 0px 20px ;
+display: grid;
+&.is-active {
+  padding: 16px 20px ;
+}
+&__inside{
+  transform: translateY(-100px);
+  opacity: 0;
+  transition: all 0.4s ease-in-out;
+  &.is-active {
+    transform: translateY(0px);
+    opacity: 1;
+  }
+}
 }
